--- a/index.html
+++ b/index.html
@@ -311,8 +311,11 @@
                   <img src="./image/Project_Web3.png" alt="" />
                 </div>
             </div>
+            <div id="project_content">
+                <!-- Сюди буде вставлений контент проєкту -->
+            </div>
         </section>
-        
+
         <section class="page_contacts" id="page_contacts">
             <span class="block_title">Contacts</span>
             <span class="subtitle_contacts">Always open to new ideas and exciting projects! I'm ready to consider collaboration proposals and work together on projects. Get in touch with me, and together we can create something truly unique</span>
