--- a/projects/project1.html
+++ b/projects/project1.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./image/Project_TheFlame_img1.png">
+    <div>
+        <img src="./image/Project_TheFlame_img1.png">
+    </div>
 </body>
 </html>
