--- a/projects/project9/project9.html
+++ b/projects/project9/project9.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Daiwo</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div>
-        <img src="./image/Project_TheFlame_img1.png">
-    </div>
+    <img src="./image/project9_img1image.jpg">
 </body>
 </html>
