--- a/projects/project1/project1.html
+++ b/projects/project1/project1.html
@@ -8,5 +8,12 @@
 </head>
 <body>
         <img src="./image/Project_TheFlame_img1.png">
+        <img src="./image/Project_TheFlame_img2.png">
+        <img src="./image/Project_TheFlame_img3.png">
+        <img src="./image/Project_TheFlame_img4.png">
+        <img src="./image/Project_TheFlame_img5.png">
+        <img src="./image/Project_TheFlame_img6.png">
+        <img src="./image/Project_TheFlame_img7.png">
+        <img src="./image/Project_TheFlame_img8.png">
 </body>
 </html>
