--- a/projects/project9/project9.html
+++ b/projects/project9/project9.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <img src="./image/project9_img1image.jpg">
+    <img src="./image/Project9_image1.png">
+    <img src="./image/Project9_image2.png">
+    <img src="./image/Project9_image3.png">
+    <img src="./image/Project9_image4.png">
+    <img src="./image/Project9_image5.png">
+    <img src="./image/Project9_image6.png">
+    <img src="./image/Project9_image7.png">
 </body>
 </html>
