--- a/index.html
+++ b/index.html
@@ -349,9 +349,52 @@
             <button class="button_primary" onclick="openForm()">Submit request</button>
         </div>
     </footer>
-    
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "w9zV27iIMkF99mIcW",
+      });
+   })();
+</script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("w9zV27iIMkF99mIcW"); // Замість 'YOUR_PUBLIC_KEY' використовуйте ваш реальний public key
+        })();
+
+        function openForm() {
+            document.getElementById("myForm").style.display = "block";
+            document.getElementById("overlay").style.display = "block"; // Показати overlay
+        }
+
+        function closeForm() {
+            document.getElementById("myForm").style.display = "none";
+            document.getElementById("overlay").style.display = "none"; // Приховати overlay
+        }
+
+        function sendEmail() {
+            var templateParams = {
+                name: document.getElementById('name').value,
+                contact: document.getElementById('contact').value,
+                comment: document.getElementById('comment').value
+            };
+
+            emailjs.send('service_1hvvct5', 'template_w2gaozk', templateParams)
+                .then(function(response) {
+                    console.log('Sent successfully:', response);
+                    alert('Your request has been sent successfully!');
+                    closeForm();
+                }, function(error) {
+                    console.error('Failed to send:', error);
+                    alert('Failed to send your request. Please try again.');
+                });
+        }
+    </script>
 </body>
 </html>
