--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fedin Design</title>
+    <title>Pure Design</title>
+    <link rel="icon" href="./image/logo 32х32.png" type="image/png">
+    <link rel="icon" href="./image/logo svg.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
